# techniques_de_test_2025_2026

./: .coverage  Makefile  PLAN.md  README.md  RETEX.md  pyproject.toml
docs/triangulator/: app.html  binary_codec.html  exceptions.html  index.html  point_set_client.html  triangulation.html
src/: __init__.py
src/triangulator/: __init__.py  app.py  binary_codec.py  exceptions.py  point_set_client.py  triangulation.py
tests/: __init__.py  conftest.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_api.py  test_binary_codec.py  test_point_set_client.py  test_triangulation.py
