[project]
name = "triangulator"
version = "1.0.0"
description = "Micro-service de triangulation de points 2D"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "unit: Tests unitaires rapides",
    "integration: Tests d'intégration",
    "performance: Tests de performance (exclus par défaut)",
    "slow: Tests lents (> 1s)",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
